--- a/CodeJam Solutions/CodeJam Solutions.csproj
+++ b/CodeJam Solutions/CodeJam Solutions.csproj
@@ -45,6 +45,7 @@
     <Compile Include="2008\QualificationRound\ASavingtheUniverse.cs" />
     <Compile Include="2008\QualificationRound\BTrainTimetable.cs" />
     <Compile Include="2008\QualificationRound\CFlySwatter.cs" />
+    <Compile Include="2008\Round1A\AMinimumScalarProduct.cs" />
     <Compile Include="Base\BaseProblem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -54,7 +55,6 @@
     <None Include="2008\QualificationRound\Data\A-large-practice.in">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Content Include="2008\QualificationRound\CFlySwatter.js" />
     <Content Include="2008\QualificationRound\Data\A-small-practice.in">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -88,6 +88,14 @@
     <None Include="2008\QualificationRound\Data\C-small-practice.out">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="2008\Round1A\Data\A-large-practice.in">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="2008\Round1A\Data\A-large-practice.out" />
+    <None Include="2008\Round1A\Data\A-small-practice.in">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="2008\Round1A\Data\A-small-practice.out" />
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup />
